@@ -15,6 +15,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.web.cors.CorsConfiguration;
 import java.util.List;
+import java.util.Arrays;
 
 //@Configuration
 //@EnableWebSecurity
@@ -74,13 +75,17 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         final CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedHeaders(
-                List.of("Authorization", "Cache-Control", "Content-Type"));
-        corsConfiguration.setAllowedOrigins(List.of("http://localhost:5173"));
-        corsConfiguration
-                .setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PUT", "OPTIONS", "PATCH", "DELETE"));
-        corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setExposedHeaders(List.of("Authorization"));
+        corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+        corsConfiguration.setAllowedMethods(Arrays.asList("*"));
+        corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
+
+        // corsConfiguration.setAllowedHeaders(
+        //         List.of("Authorization", "Cache-Control", "Content-Type"));
+        // corsConfiguration.setAllowedOrigins(List.of("http://localhost:5173"));
+        // corsConfiguration
+        //         .setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PUT", "OPTIONS", "PATCH", "DELETE"));
+        // corsConfiguration.setAllowCredentials(true);
+        // corsConfiguration.setExposedHeaders(List.of("Authorization"));
 
         http
                 .csrf(csrf -> csrf.disable())
